# claude-usage-bar

./: .gitignore  Cargo.toml  README.md  build-macos.sh
.github/workflows/: ci.yml  release.yml
docs/design/: limits-and-calibration.md
docs/superpowers/: adr-2026-06-01-local-logs-over-oauth-endpoint.md
docs/superpowers/plans/: 2026-05-21-claude-usage-bar-rust.md
docs/superpowers/specs/: 2026-05-21-claude-usage-bar-rust-design.md
macos/: Info.plist
src/: autostart.rs  calibration.rs  client.rs  error.rs  logs.rs  main.rs  render.rs  tray.rs  usage.rs
src/token/: file.rs  macos.rs  mod.rs
