[package]
name = "claude-usage-bar"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.44", default-features = false, features = ["clock", "std"] }
dirs = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tao = "0.35.2"
tray-icon = "0.24.0"
ureq = "^2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-core-foundation = "0.3.2"
